# Drillo

./: .env.sample  .gitignore  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
Drillo/drillo/: asgi.py  jinja2.py  settings.py  urls.py  views.py  wsgi.py
Drillo/eventman/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Drillo/eventman/migrations/: 0001_initial.py  0002_formsubmission_delete_hero.py  0003_formsubmission_slug.py  0004_remove_formsubmission_slug_and_more.py  0005_rename_page_url_formsubmission_url.py
Drillo/jinja2/: index.html
Drillo/templates/: article.html  create.html  form_submission.jinja  index.html  page_preview.html  privacy.html  rendered-page.jinja  terms.html
Drillo/templates/css/: styles.css
Drillo/templates/js/: scripts.js
Drillo/templates/readme/: readme.txt
drillo/: settings.py  urls.py
